Closed Bug 1647296 Opened 5 years ago Closed 5 years ago

ARIA reflection attributes are not nullable

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: surkov, Assigned: surkov)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

ARIA reflection attributes are not longer nullable [1], ARIA idl should be updated [2]

[1] https://w3c.github.io/aria/#AriaAttributes
[2] https://searchfox.org/mozilla-central/source/dom/webidl/AriaAttributes.webidl#13

Severity: -- → S3
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Pushed by surkov.alexander@gmail.com: https://hg.mozilla.org/integration/autoland/rev/7ec3739f95e4 ARIA reflection attributes are not nullable r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Blocks: 1655812
See Also: → 1853209
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: