Bug 1647296 - ARIA reflection attributes are not nullable r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D82948